[gd_scene load_steps=12 format=3 uid="uid://b7w7djcde0apj"]

[ext_resource type="Script" path="res://scripts/ui/gui.gd" id="1_ln8qm"]
[ext_resource type="Texture2D" uid="uid://c80c87tjnqx6e" path="res://art/gui/hud/heart_base.png" id="2_1rjc3"]
[ext_resource type="Texture2D" uid="uid://q3tnncfi1mab" path="res://art/gui/hud/heart_shrink.png" id="3_fsdul"]
[ext_resource type="Texture2D" uid="uid://4ipmkgneqcdd" path="res://art/gui/hud/sprint.png" id="4_21sca"]
[ext_resource type="Texture2D" uid="uid://dhywxck57k65a" path="res://art/gui/hud/shield.png" id="4_nopqo"]
[ext_resource type="Texture2D" uid="uid://c4k261dmdck4d" path="res://art/gui/hud/dash.png" id="4_vnhth"]
[ext_resource type="LabelSettings" uid="uid://bcfw3md0m1ndf" path="res://assets/labelsetting/inventory.tres" id="5_3t0du"]
[ext_resource type="Texture2D" uid="uid://uax1uahljq4m" path="res://art/gui/hud/attack.png" id="8_r7mev"]
[ext_resource type="Texture2D" uid="uid://rrsh5clhh8rk" path="res://art/gui/inventory/inventory_4x4.png" id="8_s3opl"]
[ext_resource type="Texture2D" uid="uid://cmjo2sbb05uwq" path="res://art/gui/inventory/inventory_cell_bare.png" id="9_gnitr"]
[ext_resource type="Script" path="res://scripts/ui/inventory_slot.gd" id="10_lelqn"]

[node name="UICanvas" type="CanvasLayer"]
script = ExtResource("1_ln8qm")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopLeftCorner" type="VBoxContainer" parent="HUD"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 418.0
offset_bottom = 97.0
theme_override_constants/separation = 0

[node name="StatContainer" type="HBoxContainer" parent="HUD/TopLeftCorner"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 4

[node name="HeartContainer" type="HBoxContainer" parent="HUD/TopLeftCorner/StatContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="Heart1" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/HeartContainer"]
layout_mode = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("2_1rjc3")
texture_progress = ExtResource("3_fsdul")

[node name="Heart2" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/HeartContainer"]
layout_mode = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("2_1rjc3")
texture_progress = ExtResource("3_fsdul")

[node name="Heart3" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/HeartContainer"]
layout_mode = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("2_1rjc3")
texture_progress = ExtResource("3_fsdul")

[node name="Heart4" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/HeartContainer"]
layout_mode = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("2_1rjc3")
texture_progress = ExtResource("3_fsdul")

[node name="Heart5" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/HeartContainer"]
layout_mode = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("2_1rjc3")
texture_progress = ExtResource("3_fsdul")

[node name="ProtContainer" type="HBoxContainer" parent="HUD/TopLeftCorner/StatContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Shield" type="TextureRect" parent="HUD/TopLeftCorner/StatContainer/ProtContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_nopqo")
stretch_mode = 3

[node name="Label" type="Label" parent="HUD/TopLeftCorner/StatContainer/ProtContainer/Shield"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "27"
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CooldownContainer" type="HBoxContainer" parent="HUD/TopLeftCorner/StatContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Dash" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/CooldownContainer"]
layout_mode = 2
fill_mode = 3
texture_under = ExtResource("4_vnhth")
texture_progress = ExtResource("4_vnhth")
tint_progress = Color(0.2, 0.2, 0.2, 1)

[node name="Sprint" type="TextureRect" parent="HUD/TopLeftCorner/StatContainer/CooldownContainer"]
layout_mode = 2
texture = ExtResource("4_21sca")
stretch_mode = 3

[node name="Attack" type="TextureProgressBar" parent="HUD/TopLeftCorner/StatContainer/CooldownContainer"]
layout_mode = 2
fill_mode = 3
texture_under = ExtResource("8_r7mev")
texture_progress = ExtResource("8_r7mev")
tint_progress = Color(0.2, 0.2, 0.2, 1)

[node name="EffectContainer" type="HBoxContainer" parent="HUD/TopLeftCorner"]
layout_mode = 2

[node name="Inventory" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Inventory"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -75.0
offset_right = -32.0
offset_bottom = 75.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("8_s3opl")
stretch_mode = 3

[node name="GridContainer" type="GridContainer" parent="Inventory/TextureRect"]
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -33.5
offset_right = 33.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4

[node name="Cell0" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell0"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell1" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell2" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell3" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell4" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell5" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell6" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell6"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell7" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell7"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell8" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell8"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell9" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell9"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell10" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell10"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell11" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell11"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell12" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell12"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell12"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell13" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell13"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell13"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell14" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell14"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell14"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Cell15" type="TextureRect" parent="Inventory/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("9_gnitr")
script = ExtResource("10_lelqn")

[node name="Item" type="TextureRect" parent="Inventory/TextureRect/GridContainer/Cell15"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Count" type="Label" parent="Inventory/TextureRect/GridContainer/Cell15"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -14.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("5_3t0du")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControlsList" type="HBoxContainer" parent="Controls"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = -16
alignment = 2
